@@ -8,7 +8,6 @@
 package org.opendaylight.openflowplugin.openflow.md.core.sal.convertor.action;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import org.junit.Assert;
@@ -143,7 +142,7 @@ public class ActionConvertorV13Test {
         Optional<List<org.opendaylight.yang.gen.v1.urn.opendaylight.action.types.rev131112.action
                 .Action>> mdSalActions = convertorManager.convert(actions, data);
 
-        Assert.assertEquals("Wrong number of output actions", 0, mdSalActions.orElse(Collections.emptyList()).size());
+        Assert.assertEquals("Wrong number of output actions", 0, mdSalActions.orElse(List.of()).size());
     }
 
     /**
@@ -241,8 +240,8 @@ public class ActionConvertorV13Test {
 
         actionBuilder = new ActionBuilder();
         MatchEntryBuilder matchBuilder = new MatchEntryBuilder();
-        matchBuilder.setOxmClass(OpenflowBasicClass.class);
-        matchBuilder.setOxmMatchField(InPort.class);
+        matchBuilder.setOxmClass(OpenflowBasicClass.VALUE);
+        matchBuilder.setOxmMatchField(InPort.VALUE);
         matchBuilder.setHasMask(false);
         InPortCaseBuilder inPortCaseBuilder = new InPortCaseBuilder();
         InPortBuilder inPortBuilder = new InPortBuilder();
@@ -289,7 +288,7 @@ public class ActionConvertorV13Test {
                 .Action>> mdSalActionsOptional = convertorManager.convert(actions, data);
 
         List<org.opendaylight.yang.gen.v1.urn.opendaylight.action.types.rev131112.action
-                .Action> mdSalActions = mdSalActionsOptional.orElse(Collections.emptyList());
+                .Action> mdSalActions = mdSalActionsOptional.orElse(List.of());
 
         Assert.assertEquals("Wrong number of output actions", 16, mdSalActions.size());
         org.opendaylight.yang.gen.v1.urn.opendaylight.action.types.rev131112.action.Action action = mdSalActions.get(0);
@@ -516,7 +515,7 @@ public class ActionConvertorV13Test {
         data.setIpProtocol(FlowConvertorUtil.getIpProtocolFromFlow(flow));
 
         Optional<List<Action>> actionsOptional = convertorManager.convert(salActions, data);
-        List<Action> actions = actionsOptional.orElse(Collections.emptyList());
+        List<Action> actions = actionsOptional.orElse(List.of());
 
         Assert.assertEquals("Wrong number of actions", 12, actions.size());
         Action action = actions.get(0);
@@ -529,7 +528,7 @@ public class ActionConvertorV13Test {
                         .action.choice.SetFieldCase) action.getActionChoice();
         MatchEntry entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.VlanPcp.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.VlanPcp.VALUE, false);
         Assert.assertEquals("Wrong vlan pcp", 7, ((VlanPcpCase) entry.getMatchEntryValue()).getVlanPcp().getVlanPcp()
                 .intValue());
 
@@ -541,7 +540,7 @@ public class ActionConvertorV13Test {
                 .action.choice.SetFieldCase) action.getActionChoice();
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.VlanVid.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.VlanVid.VALUE, false);
         Assert.assertEquals("Wrong vlan vid", 0, ((VlanVidCase) entry.getMatchEntryValue()).getVlanVid().getVlanVid()
                 .intValue());
         Assert.assertEquals("Wrong cfi bit", true, ((VlanVidCase) entry.getMatchEntryValue()).getVlanVid().getCfiBit());
@@ -554,7 +553,7 @@ public class ActionConvertorV13Test {
                 .action.choice.SetFieldCase) action.getActionChoice();
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.EthDst.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.EthDst.VALUE, false);
         Assert.assertEquals("Wrong dl dst", "00:00:00:00:00:06", ((EthDstCase) entry.getMatchEntryValue()).getEthDst()
                 .getMacAddress().getValue());
 
@@ -566,7 +565,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.EthSrc.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.EthSrc.VALUE, false);
         Assert.assertEquals("Wrong dl src", "00:00:00:00:00:05", ((EthSrcCase) entry.getMatchEntryValue()).getEthSrc()
                 .getMacAddress().getValue());
 
@@ -578,7 +577,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv4Src.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv4Src.VALUE, false);
         Assert.assertEquals("Wrong ipv4 src", "10.0.0.0", ((Ipv4SrcCase) entry.getMatchEntryValue()).getIpv4Src()
                 .getIpv4Address().getValue());
 
@@ -590,7 +589,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv4Dst.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv4Dst.VALUE, false);
         Assert.assertEquals("Wrong ipv4 dst", "10.0.0.2", ((Ipv4DstCase) entry.getMatchEntryValue()).getIpv4Dst()
                 .getIpv4Address().getValue());
 
@@ -602,7 +601,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.TcpSrc.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.TcpSrc.VALUE, false);
         Assert.assertEquals("Wrong tcp src", 54, ((TcpSrcCase) entry.getMatchEntryValue()).getTcpSrc()
                 .getPort().getValue().intValue());
 
@@ -614,7 +613,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.TcpDst.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.TcpDst.VALUE, false);
         Assert.assertEquals("Wrong tcp dst", 45, ((TcpDstCase) entry.getMatchEntryValue()).getTcpDst()
                 .getPort().getValue().intValue());
 
@@ -626,7 +625,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.IpDscp.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.IpDscp.VALUE, false);
         Assert.assertEquals("Wrong ip dscp", 4, ((IpDscpCase) entry.getMatchEntryValue()).getIpDscp()
                 .getDscp().getValue().intValue());
 
@@ -638,7 +637,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.VlanVid.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.VlanVid.VALUE, false);
         Assert.assertEquals("Wrong vlan id", 22, ((VlanVidCase) entry.getMatchEntryValue()).getVlanVid()
                 .getVlanVid().intValue());
         Assert.assertEquals("Wrong cfi bit", true, ((VlanVidCase) entry.getMatchEntryValue()).getVlanVid()
@@ -652,7 +651,7 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv6Src.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv6Src.VALUE, false);
         Assert.assertEquals("Wrong ipv6 src", "::5",
                 ((Ipv6SrcCase) entry.getMatchEntryValue()).getIpv6Src().getIpv6Address().getValue());
 
@@ -664,14 +663,14 @@ public class ActionConvertorV13Test {
                 action.getActionChoice().implementedInterface().getName());
         entry = setFieldCase.getSetFieldAction().getMatchEntry().get(0);
         checkEntryHeader(entry,
-                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv6Dst.class, false);
+                org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.oxm.rev150225.Ipv6Dst.VALUE, false);
         Assert.assertEquals("Wrong ipv6 dst", "::",
                 ((Ipv6DstCase) entry.getMatchEntryValue()).getIpv6Dst().getIpv6Address().getValue());
     }
 
-    private static void checkEntryHeader(final MatchEntry entry, final Class<? extends MatchField> field,
+    private static void checkEntryHeader(final MatchEntry entry, final MatchField field,
             final boolean hasMask) {
-        Assert.assertEquals("Wrong oxm class", OpenflowBasicClass.class, entry.getOxmClass());
+        Assert.assertEquals("Wrong oxm class", OpenflowBasicClass.VALUE, entry.getOxmClass());
         Assert.assertEquals("Wrong oxm field", field, entry.getOxmMatchField());
         Assert.assertEquals("Wrong hasMask", hasMask, entry.getHasMask());
     }
